--- a/Cau1/Cau1.csproj
+++ b/Cau1/Cau1.csproj
@@ -46,14 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BAL\Department\DepartmentBAL.cs" />
+    <Compile Include="BAL\Employee\EmployeeBAL.cs" />
+    <Compile Include="BEL\Department\DepartmentBEL.cs" />
+    <Compile Include="BEL\Employee\EmployeeBEL.cs" />
+    <Compile Include="DAL\Department\DepartmentDAL.cs" />
+    <Compile Include="DAL\Employee\EmployeeDAL.cs" />
+    <Compile Include="GUI\Employee\EmployeeGUI.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="GUI\Employee\EmployeeGUI.Designer.cs">
+      <DependentUpon>EmployeeGUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\Employee\EmployeeGUI.resx">
+      <DependentUpon>EmployeeGUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,5 +85,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
